[gd_scene load_steps=4 format=3 uid="uid://bwnfc1y2ijtef"]

[ext_resource type="Script" path="res://scripts/pause_menu.gd" id="1_fvwsy"]

[sub_resource type="StyleBoxLine" id="StyleBoxLine_75bas"]
color = Color(0, 0, 0, 0)

[sub_resource type="StyleBoxLine" id="StyleBoxLine_5w8xc"]
color = Color(0, 0, 0, 0)

[node name="pause_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fvwsy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -44.0
offset_top = -24.0
offset_right = 44.0
offset_bottom = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="resume_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
text = "Resume Game"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_75bas")

[node name="option_menu" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
text = "Option Menu"

[node name="HSeparator2" type="HSeparator" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 30
theme_override_styles/separator = SubResource("StyleBoxLine_5w8xc")

[node name="back_button" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(130, 50)
layout_mode = 2
text = "Go Back To Menu"

[connection signal="pressed" from="VBoxContainer/resume_button" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="VBoxContainer/option_menu" to="." method="_on_option_menu_pressed"]
[connection signal="pressed" from="VBoxContainer/back_button" to="." method="_on_back_button_pressed"]
